--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,23 +31,36 @@
         a:hover {
           color: #1EAEDB; }
         
-        .container {
+        .outer {
+          display: table;
+          position: absolute;
+          top: 0;
+          left: 0;
+          height: 100%;
+          width: 100%; }
+
+        .middle {
+          display: table-cell;
+          vertical-align: middle; }
+
+        .inner {
+          margin-left: auto;
+          margin-right: auto;
           max-width: 800px;
-          margin: auto;
           text-align: center; }
-        
-        .container ul {
+                
+        ul {
           list-style: none;
           margin: 0;
           padding: 0; }
         
-        .container ul li {
+        ul li {
           display: inline; }
         
-        .container ul li::after {
+        ul li::after {
           content: "\00A0\00A0\00B7\00A0\00A0"; }
         
-        .container ul li:last-child::after {
+        ul li:last-child::after {
           content: none; }
         
         .footer {
@@ -67,9 +80,13 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        {{content}}
-        <p class="footer">© <script>document.write(new Date().getFullYear());</script> <a href="http://www.stefanglase.de">Stefan Glase</a></p>
-    </div>
+    <div class="outer">
+        <div class="middle">
+            <div class="inner">
+                {{content}}
+                <p class="footer">© <script>document.write(new Date().getFullYear());</script> <a href="http://www.stefanglase.de">Stefan Glase</a></p>
+            </div>
+        </div>
+    </div>  
 <body>
 </html>
