--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,7 @@
     {{content}}
 
     <div class="docs-section footer">
+        <img class="skyline" src="/images/skyline-leichlingen.png" alt="binary skyline of Leichlingen"/>
         <p>&copy; 2010 - <script>document.write(new Date().getFullYear())</script> <a href="/imprint">codescape</a></p>
     </div>
 
