add margin for skyline

--- a/css/custom.css
+++ b/css/custom.css
@@ -51,6 +51,10 @@ h6 {
 .docs-section.footer {
     border-top: 0; }
 
+.skyline {
+  margin-bottom: 2rem; }
+
+
 .docs-section table {
     width: 100%; }
 
