--- a/css/custom.css
+++ b/css/custom.css
@@ -10,10 +10,10 @@
     font-size: 11px; }
 
 h2, h3, h4, h5, h6 {
-    text-transform: uppercase;
+    text-transform: lowercase;
     font-size: 1.4rem;
     letter-spacing: .2rem;
-    font-weight: 600; }
+    font-weight: 300; }
 
 h2 {
     font-size: 2.4rem; }
