--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
 
     <div class="docs-section footer">
         <img class="skyline" src="/images/skyline-leichlingen.png" alt="binary skyline of Leichlingen"/>
-        <p>&copy; 2010 - <script>document.write(new Date().getFullYear())</script> <a href="/imprint">codescape</a></p>
+        <p>&copy; 2010 - <script>document.write(new Date().getFullYear())</script> <a href="/#imprint">codescape</a></p>
     </div>
 
 </div>
